TASK 4 to TASK 8
Updated with bower to set dependencies

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -491,6 +491,10 @@ section.background-yellow .container .background-lightblue {
 }
 
 
+.nocomments{
+    height: 120px;
+}
+
 /*
 Mobile
 */
@@ -594,6 +598,8 @@ Mobile
     .h-discussion-a{
         height: 110px;
     }
+
+
 
     .col-xs-offset-right-12 {
         margin-right: 100%;
